[package]
name = "rlnk"
version = "0.2.0"
edition = "2024"
license = "MIT"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.6"
futures-util = "0.3.32"
http = "1.3.1"
humantime = "2.3.0"
mongodb = "3.3.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5.7"

[lints.rust]
future-incompatible = "warn"
nonstandard-style = "deny"
rust-2018-idioms = "deny"

[lints.clippy]
all = { level = "deny", priority = 10 }
redundant_clone = { level = "deny", priority = 9 }
needless_borrow = { level = "deny", priority = 9 }
manual_ok_or = { level = "deny", priority = 8 }
needless_collect = { level = "deny", priority = 8 }
clone_on_copy = { level = "deny", priority = 8 }
